--- a/Manuel de réparation Vectrex.lyx
+++ b/Manuel de réparation Vectrex.lyx
@@ -6,6 +6,9 @@
 \origin unavailable
 \textclass article
 \use_default_options true
+\begin_modules
+tcolorbox
+\end_modules
 \maintain_unincluded_children false
 \language english
 \language_package default
@@ -29,6 +32,7 @@
 \bibtex_command default
 \index_command default
 \paperfontsize default
+\spacing single
 \use_hyperref false
 \papersize default
 \use_geometry false
@@ -44,6 +48,7 @@
 \use_package undertilde 1
 \cite_engine basic
 \cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
@@ -91,19 +96,15 @@ avec l'assistance de Flore Netter
 \begin_inset Newline newline
 \end_inset
 
+Remerciement spécial à Pascal, Jeremy et Gérald pour leurs Vectrex
+\begin_inset Newline newline
+\end_inset
+
 Relecture par les membres de l'association MO5
-\begin_inset Newline newline
-\end_inset
-
-
-\begin_inset Newline newline
-\end_inset
-
-Remerciement spécial à Pascal, Jeremy et Gérald pour leur Vectrex
 \end_layout
 
 \begin_layout Date
-Révision du 3 mars 2022
+Révision du 12 mars 2022
 \end_layout
 
 \begin_layout Standard
@@ -121,6 +122,22 @@ LatexCommand href
 name "https://github.com/Guimli/Vectrex-Repair-Manual"
 target "https://github.com/Guimli/Vectrex-Repair-Manual"
 literal "false"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+thispagestyle{empty}
+\end_layout
 
 \end_inset
 
@@ -153,12 +170,82 @@ LatexCommand tableofcontents
 Précaution
 \end_layout
 
+\begin_layout New Color Box Type
+\begin_inset Argument 1
+status open
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+
+cBoxB
+\end_layout
+
+\end_inset
+
+
+\begin_inset Argument 3
+status open
+
+\begin_layout Plain Layout
+
+1
+\end_layout
+
+\end_inset
+
+
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+colback=white, colframe=red!75!black, title=#1
+\end_layout
+
 \begin_layout Standard
-Les consoles Vectrex contiennent un tube cathodique.
+\begin_inset Flex Custom Color Box 2
+status open
+
+\begin_layout Plain Layout
+\begin_inset Argument 1
+status open
+
+\begin_layout Plain Layout
+Risque électrique
+\end_layout
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename Images/Electric-Shock.png
+	width 10text%
+
+\end_inset
+
+ Les consoles Vectrex contiennent un tube cathodique.
  De hautes tensions sont présentes dans l'équipement électronique, même
  après l'arrêt de la console.
- Ne manipuler pas une Vectrex sans les connaissances électronique spécifiques
+ Ne manipuler pas une Vectrex sans les connaissances électrique spécifiques
  requises.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
@@ -300,7 +387,14 @@ PowerBoard
 \end_layout
 
 \begin_layout Standard
-Coming soon !
+\begin_inset External
+	template PDFPages
+	filename Schematic/PowerBoard B&W.pdf
+	extra LaTeX "fitpaper"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -311,6 +405,21 @@ LogicBoard
 \begin_inset External
 	template PDFPages
 	filename Schematic/LogicBoard 3GE B&W.pdf
+	extra LaTeX "fitpaper"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+CRT Board
+\end_layout
+
+\begin_layout Standard
+\begin_inset External
+	template PDFPages
+	filename Schematic/CRTBoard B&W.pdf
 	extra LaTeX "fitpaper"
 
 \end_inset
@@ -596,18 +705,6 @@ name "IC202 6"
 \end_layout
 
 \begin_layout Standard
-\begin_inset Graphics
-	filename Images/IC202/pin6.bmp
-	width 100text%
-	BoundingBox 29bp 81bp 532bp 484bp
-	clip
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
 Cette broche est connectée a la broche OE (Output Enable) de la ROM IC201.
  Elles devraient toujours être a un niveau de tension de 0V sauf en cas
  d'utilisation d'une cartouche de jeu.
@@ -2377,7 +2474,7 @@ Broche 16 (VDD)
 \end_layout
 
 \begin_layout Standard
-+5V analogique
+Alimentation, +5V analogique.
 \end_layout
 
 \begin_layout Subsection
