--- a/Manuel de réparation Vectrex.lyx
+++ b/Manuel de réparation Vectrex.lyx
@@ -171,6 +171,7 @@ Précaution
 \end_layout
 
 \begin_layout New Color Box Type
+
 \begin_inset Argument 1
 status open
 
@@ -2161,6 +2162,13 @@ OUT
 \end_inset
 
 )
+\begin_inset CommandInset label
+LatexCommand label
+name "IC301 4"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2259,28 +2267,10 @@ IC302 - 4052B
 
 \begin_layout Description
 Description: double multiplexeur/démultiplexeur.
-\begin_inset VSpace defskip
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
-\begin_inset Graphics
-	filename Images/IC302/CD4052B.png
-	width 60text%
-
-\end_inset
-
-
-\begin_inset VSpace defskip
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Le premier multiplexeur prend en entré (broche 13) le signal en provenence
+Le premier multiplexeur prend en entré (broche 13) le signal en provenance
  du DAC IC301.
  Et redirige ces signaux en fonction des besoins vers les broches 11 (son
  digitalisé), 12 (signal vidéo vertical), 14 (?) et 15 (intensité de l'image).
@@ -2297,8 +2287,25 @@ Le second multiplexeur est utilisé pour sélectionner le potentiomètre des
 Broche 1, 2, 4 et 5 (Y channels In/Out)
 \end_layout
 
+\begin_layout Standard
+Broche de lecture des potentiomètres des joysticks.
+ Sans interet pour réparer les problème commum de la Vectrex.
+\end_layout
+
 \begin_layout Subsubsection
 Broche 3 (Common Y)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC302 3"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Broche de sortie des potentiomètres des joysticks.
+ Sans interet pour réparer les problème commum de la Vectrex.
 \end_layout
 
 \begin_layout Subsubsection
@@ -2375,8 +2382,22 @@ En cas d'absence de signal, remplacer IC207 (PIA 6522)
 Broche 11 (X Channel 3)
 \end_layout
 
+\begin_layout Standard
+Sortie pour les sons digitalisés.
+ Il n'y a pas de son digitalisé dans l'écran de démarrage de la Vectrex
+ ou dans le jeu Minestorm.
+ La tesion sur cette broche est 0V.
+\end_layout
+
 \begin_layout Subsubsection
 Broche 12 (X Channel 0)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC302 12"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2437,10 +2458,34 @@ En cas d'absence de signal, vérifier les signaux sur les broches 5 à 12
 
 \begin_layout Subsubsection
 Broche 14 (X Channel 1)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC302 14"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Sortie pour le controle direct et simultané d'amplification des signaux
+ X et Y.
+ Cette sortie permet d'effectuer des zoom ou de changer la précision du
+ signal.
+ Cette sortie n'est pas utilisé dans l'écran de démarrage de la Vectrex
+ ou dans le jeu Minestorm.
+ La tesion sur cette broche est 0V.
 \end_layout
 
 \begin_layout Subsubsection
 Broche 15 (X Channel 2)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC302 15"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2485,56 +2530,234 @@ IC303 - LF347
 Broche 1 (Sortie)
 \end_layout
 
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin1.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 2 (Entrée)
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin2.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 3 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC302 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 14"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 4
+\end_layout
+
+\begin_layout Standard
+Alimentation, +5V analogique.
 \end_layout
 
 \begin_layout Subsubsection
 Broche 5 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC302 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 12"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 6 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC303 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC303 7"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 7 (Sortie)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC303 7"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin7.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 8 (Sortie)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC303 8"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin8.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 9 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC303 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC303 8"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 10 (Entrée)
+\end_layout
+
+\begin_layout Standard
+Voir IC302 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 15"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 11
 \end_layout
 
+\begin_layout Standard
+Masse analogique, 0V.
+\end_layout
+
 \begin_layout Subsubsection
 Broche 12 (Entrée)
+\end_layout
+
+\begin_layout Standard
+Voir IC302 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 14"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 13 (Entrée)
 \end_layout
 
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin13.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 14 (Sortie)
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC303/pin14.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -2543,34 +2766,119 @@ IC304 - LF353
 
 \begin_layout Subsubsection
 Broche 1 (Sortie)
+\begin_inset CommandInset label
+LatexCommand label
+name "IC304 1"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC304/pin 1.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 2 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC301 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC301 4"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 3 (Entrée)
+\end_layout
+
+\begin_layout Standard
+Masse analogique, 0V.
 \end_layout
 
 \begin_layout Subsubsection
 Broche 4
 \end_layout
 
+\begin_layout Standard
+Masse analogique, 0V.
+\end_layout
+
 \begin_layout Subsubsection
 Broche 5 (Entrée)
+\end_layout
+
+\begin_layout Standard
+Voir IC302 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC302 3"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsubsection
 Broche 6 (Entrée)
 \end_layout
 
+\begin_layout Standard
+Voir IC304 
+\begin_inset CommandInset ref
+LatexCommand nameref
+reference "IC304 1"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 7 (Sortie)
 \end_layout
 
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/IC304/pin7.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Broche 8
+\end_layout
+
+\begin_layout Standard
+Alimentation, +5V analogique.
 \end_layout
 
 \begin_layout Subsection
@@ -2785,6 +3093,78 @@ Broche 14 (VDD)
 
 \begin_layout Standard
 Alimentation, +5V analogique.
+\end_layout
+
+\begin_layout Subsection
+J301 - Connecteur Vidéo
+\end_layout
+
+\begin_layout Subsubsection
+Bleu
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/J301/j301_blue.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsubsection
+Rouge
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/J301/j301_red.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsubsection
+Jaune
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/J301/j301_yellow.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+J302 - Audio
+\end_layout
+
+\begin_layout Subsubsection
+Noir
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename Images/Audio.bmp
+	width 100text%
+	BoundingBox 29bp 81bp 532bp 484bp
+	clip
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
